testsuite/tests/parser/should_fail/T13600.stderr

T13600.hs:7:4: error:
    Did you forget to activate -XBangPatterns ?
    If not, try adding a space before the bang
    ! x
